the project has gone through some restructuring, removal of unnecessary files, and updates to the README.

--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,13 @@
 .env
 .venv
 .vscode
+demploys/
+AIAPI.sh
+claude_test copy.py
+claude_test.py
 README_Bard.MD
 /assets/01.png
 /src/Config.conf
 /src/__pycache__
-src/adapter
-AIAPI.sh
-claude_test copy.py
-claude_test.py
+/src/adapter/
 /src/session_list.json
