--- a/src/Config.conf
+++ b/src/Config.conf
@@ -1,10 +1,12 @@
 # Case-Sensative
 
 [Claude]
-COOKIE=YOURS
+COOKIE=
+
 
 [ChatGPT]
-ACCESS_TOKEN=YOURS
+ACCESS_TOKEN=
+
 
 [Bard]
-SESSION_ID=YOURS
+SESSION_ID=
