--- a/webaitoapi/config.conf.example
+++ b/webaitoapi/config.conf.example
@@ -5,8 +5,8 @@ default_ai = gemini
 
 # Specify the default model for the Gemini AI service.
 # Available options:
-# "gemini-1.5-flash", "gemini-2.0-flash-exp", "gemini-1.5-pro"
-default_model_gemini = gemini-1.5-pro
+# "gemini-1.5-flash", "gemini-2.0-flash", "gemini-2.0-flash-thinking", "gemini-2.0-flash-thinking-with-apps"
+default_model_gemini = gemini-2.0-flash
 
 # Specify the default model for the Claude AI service.
 # Available options:
@@ -21,16 +21,11 @@ claude_cookie =
 gemini_cookie_1psid = 
 gemini_cookie_1psidts = 
 
-[Deepseek]
-# Token for Deepseek AI service integration.
-user_token = 
-
 [EnabledAI]
 # Enable or disable each AI service.
 # Use "true" to enable or "false" to disable.
 claude = false
 gemini = true
-deepseek = false
 
 [Browser]
 # Specify the default browser for any required operations.
