--- a/webaitoapi/config.conf.example
+++ b/webaitoapi/config.conf.example
@@ -1,6 +1,6 @@
 [AI]
 # Set the default AI service to be used.
-# Options: gemini, claude
+# Options: gemini
 default_ai = gemini
 
 # Specify the default model for the Gemini AI service.
@@ -8,15 +8,7 @@ default_ai = gemini
 # "gemini-1.5-flash", "gemini-2.0-flash", "gemini-2.0-flash-thinking", "gemini-2.0-flash-thinking-with-apps"
 default_model_gemini = gemini-2.0-flash
 
-# Specify the default model for the Claude AI service.
-# Available options:
-# "claude-3-sonnet-20240229", "claude-3-5-sonnet-20241022", "claude-3-5-haiku-20241022"
-default_model_claude = claude-3-5-sonnet-20241022
-
 [Cookies]
-# Provide cookies required for the Claude AI service.
-claude_cookie = 
-
 # Provide cookies required for the Gemini AI service.
 gemini_cookie_1psid = 
 gemini_cookie_1psidts = 
@@ -24,7 +16,6 @@ gemini_cookie_1psidts =
 [EnabledAI]
 # Enable or disable each AI service.
 # Use "true" to enable or "false" to disable.
-claude = false
 gemini = true
 
 [Browser]
