--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,29 @@
-[project]
+# File: pyproject.toml
+
+[tool.poetry]
 name = "webaitoapi"
 version = "0.2.0"
-description = ""
-authors = [
-    {name = "Amm1rr",email = "soheyl637@gmail.com"}
-]
-license = {text = "MIT"}
+description = "WebAI-to-API is a modular web server built with FastAPI, designed to manage requests across AI services."
+authors = ["Mohammad <m.khani2810@gmail.com>"]
+license = "MIT"
 readme = "README.md"
-requires-python = ">=3.10"
- 
-dependencies = [
-    "fastapi (>=0.115.7,<0.116.0)",
-    "browser-cookie3 (>=0.20.1,<0.21.0)",
-    "httpx (>=0.28.1,<0.29.0)",
-    "curl-cffi (>=0.7.4,<0.8.0)",
-    "gemini-webapi (>=1.8.3,<2.0.0)",
-    "uvicorn (>=0.34.0,<0.35.0)"
+
+packages = [
+    { include = "app", from = "src" },
+    { include = "models", from = "src" },
+    { include = "schemas", from = "src" },
 ]
-
-
-[build-system]
-requires = ["poetry-core>=2.0.0,<3.0.0"]
-build-backend = "poetry.core.masonry.api"
-
 
 [tool.poetry.dependencies]
 python = ">=3.10,<4.0"
+fastapi = ">=0.115.7,<0.116.0"
+browser-cookie3 = ">=0.20.1,<0.21.0"
+httpx = ">=0.28.1,<0.29.0"
+curl-cffi = ">=0.7.4,<0.8.0"
+gemini-webapi = ">=1.8.3,<2.0.0"
+uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
+
+
+[build-system]
+requires = ["poetry-core>=1.0.0"]
+build-backend = "poetry.core.masonry.api"
