feat: Enhance cookie extraction with cross-platform support and Windows decryption
- Added CrossPlatformCookieExtractor class to handle cookie extraction for multiple browsers.
- Implemented Windows-specific cookie decryption for Chrome using pywin32 and pycryptodome.
- Updated get_cookie_from_browser function to utilize the new extractor and fallback methods.
- Improved logging for cookie retrieval processes and error handling.
- Added dependencies for pywin32 and pycryptodome in pyproject.toml.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ httpx = ">=0.28.1,<0.29.0"
 curl-cffi = ">=0.7.4,<0.8.0"
 gemini-webapi = ">=1.8.3,<2.0.0"
 uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
+pywin32 = "^310"
+pycryptodome = "^3.23.0"
 
 
 [build-system]
