feat: Add g4f fallback server and improve server initialization logic
- Updated pyproject.toml to include g4f dependency with API extras.
- Refactored server info display to differentiate between WebAI and g4f modes.
- Implemented asynchronous initialization of the Gemini client before starting the server.
- Added fallback mechanism to start g4f API server if Gemini client initialization fails.
- Enhanced logging for server startup and initialization status.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
 # These will only be installed on Windows systems
 pywin32 = { version = "==308", platform = "win32" }
 pycryptodomex = { version = "==3.21.0", platform = "win32" }
+g4f = {version = "^0.5.5.5", extras = ["api"]}
 
 
 [build-system]
