--- a/config.conf.example
+++ b/config.conf.example
@@ -1,24 +1,39 @@
-# Set the default AI service to be used.
-# Options: gemini
+# Configuration File for WebAI-to-API Server
+# -------------------------------------------
+# ⚠️ Note: This file is *only* used by the WebAI-to-API server.
+# It is NOT intended for use with gpt4free providers.
+
+# --- Browser Settings ---
+# Set the browser that will be used for any required operations.
+# Only modify this section in most use cases.
+# Supported options: chrome, firefox, brave, edge, safari
+[Browser]
+name = chrome
+
+# --- AI Provider Settings ---
+# Select the default AI service.
+# Currently supported: gemini
 [AI]
 default_ai = gemini
 
-# Specify the default model for the Gemini AI service.
-# Available options:
-# "gemini-1.5-flash", "gemini-2.0-flash", "gemini-2.0-flash-thinking", "gemini-2.0-flash-thinking-with-apps"
+# --- Gemini Model Configuration ---
+# Choose the model to be used when Gemini is selected as the AI.
+# Available models:
+# - gemini-1.5-flash
+# - gemini-2.0-flash
+# - gemini-2.0-flash-thinking
+# - gemini-2.0-flash-thinking-with-apps
 default_model_gemini = gemini-2.0-flash
 
-# Provide the necessary cookies for the Gemini AI service, or use a browser to log into your Google account
+# --- Gemini Cookies ---
+# Provide your authentication cookies for Gemini here.
+# You can either paste them manually or log in via browser to generate them.
 [Cookies]
 gemini_cookie_1psid = 
 gemini_cookie_1psidts = 
 
-# Enable or disable each AI service.
-# Use "true" to enable or "false" to disable.
+# --- AI Services Toggle ---
+# Enable or disable specific AI providers.
+# Use "true" to enable and "false" to disable.
 [EnabledAI]
 gemini = true
-
-# Specify the default browser for any required operations.
-# Options: firefox, brave, chrome, edge, safari
-[Browser]
-name = chrome
