--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,8 +27,10 @@ uvicorn = {extras = ["standard"], version = ">=0.34.0,<0.35.0"}
 # These will only be installed on Windows systems
 pywin32 = { version = "==308", platform = "win32" }
 pycryptodomex = { version = "==3.21.0", platform = "win32" }
-g4f = {version = "^0.5.5.5", extras = ["api"]}
 tomli = "^2.2.1"
+g4f = "^0.5.5.6"
+python-multipart = "^0.0.20"
+aiohttp-socks = "^0.10.1"
 
 
 [build-system]
