--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,8 @@ tomli = "^2.2.1"
 g4f = "^0.5.5.6"
 python-multipart = "^0.0.20"
 aiohttp-socks = "^0.10.1"
+nodriver = "^0.46.1"
+platformdirs = "^4.3.8"
 
 
 [build-system]
