feat: Update default Gemini model to 3.0 Pro
Add gemini 3.0 in model list
Fixes #47

This commit updates the default Gemini model used in the application from `gemini-2.0-flash` to `gemini-3.0-pro`.

Changes include:
- Updated the `model` field in example API requests and responses in `README.md`.
- Updated the `default_model_gemini` setting in `README.md` and `config.conf.example`.
- Added new Gemini model options to `config.conf.example`.
- Updated `aiohttp` dependency in `poetry.lock`.

--- a/config.conf.example
+++ b/config.conf.example
@@ -23,7 +23,10 @@ default_ai = gemini
 # - gemini-2.0-flash
 # - gemini-2.0-flash-thinking
 # - gemini-2.0-flash-thinking-with-apps
-default_model_gemini = gemini-2.0-flash
+# - gemini-2.5-pro
+# - gemini-2.5-flash
+# - gemini-3.0-pro
+default_model_gemini = gemini-3.0-pro
 
 # --- Gemini Cookies ---
 # Provide your authentication cookies for Gemini here.
